[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/elements/BackTile_05.png" type="Texture" id=1]
[ext_resource path="res://Key.gd" type="Script" id=2]
[ext_resource path="res://assets/elements/shadedLight26.png" type="Texture" id=3]
[ext_resource path="res://assets/particles/particleCartoonStar.png" type="Texture" id=4]

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=3]
resource_name = "pulse"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 5.0

[node name="Key" type="Area2D"]
monitoring = false
script = ExtResource( 2 )

[node name="BG" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.175, 0.175 )
texture = ExtResource( 1 )

[node name="BeatParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.25
one_shot = true
explosiveness = 1.0
randomness = 1.0
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 25.0
spread = 180.0
initial_velocity = 66.0
angular_velocity = 50.0
linear_accel = 60.0
color = Color( 1, 0, 0, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Arrow" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="InitParticles" type="CPUParticles2D" parent="."]
visible = false
emitting = false
amount = 12
one_shot = true
randomness = 1.0
fixed_fps = 30
gravity = Vector2( 0, 0 )
scale_amount = 0.2
scale_amount_random = 0.5
color_ramp = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/pulse = SubResource( 3 )

[node name="Iframes" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[connection signal="timeout" from="Iframes" to="." method="_on_Iframes_timeout"]
